[package]
name = "ddc-macos"
version = "0.2.0"
authors = ["Haim Gelfenbeyn <haim@g8n.me>"]
edition = "2018"
description = "DDC/CI monitor control on MacOS"
documentation = "http://haimgel.github.io/ddc-macos-rs/ddc_macos"
readme = "README.md"
repository = "https://github.com/haimgel/ddc-macos-rs"
license = "MIT"
keywords = ["ddc", "mccs", "vcp", "vesa", "macos"]
categories = ["hardware-support", "os::macos-apis"]

[dependencies]
core-foundation = "^0.9.3"
core-foundation-sys = "^0.8.3"
core-graphics = "^0.22.3"
ddc = "^0.2.2"
io-kit-sys = "0.2.0"
mach = "^0.3.2"
thiserror = "^1"

[badges]
maintenance = { status = "actively-developed" }
